--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
+-e git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
 Pillow==5.0.0
